[gd_scene load_steps=16 format=3 uid="uid://d3mhnudjdb1w1"]

[ext_resource type="Texture2D" uid="uid://cwa13epl1455x" path="res://Visit website button.png" id="1_i31eh"]
[ext_resource type="Texture2D" uid="uid://b4io3t4kdbpxg" path="res://Icon3.png" id="1_p074x"]
[ext_resource type="Texture2D" uid="uid://ckscywlnsh4ra" path="res://Icon.png" id="1_xumjx"]
[ext_resource type="Script" path="res://Visit website button.gd" id="2_pxjhi"]
[ext_resource type="FontFile" uid="uid://bm5aw3oomxwba" path="res://fonts/SF Pro - Semibold.otf" id="2_x6lv5"]
[ext_resource type="Texture2D" uid="uid://bjhvn4wy7acyw" path="res://Visit website button shadow.png" id="3_pdotm"]
[ext_resource type="FontFile" uid="uid://c1pyuuxlo30gl" path="res://fonts/SF-Pro-Text-Regular.otf" id="3_v0y25"]

[sub_resource type="Animation" id="Animation_2ohom"]
resource_name = "Hover"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shadow/Button:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.894118, 0.894118, 0.894118, 1)]
}

[sub_resource type="Animation" id="Animation_30s7m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shadow/Button:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8f6va"]
_data = {
"Hover": SubResource("Animation_2ohom"),
"RESET": SubResource("Animation_30s7m")
}

[sub_resource type="Animation" id="Animation_mfg5a"]
resource_name = "Pressed"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shadow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1.15, 1.15)]
}

[sub_resource type="Animation" id="Animation_682hs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shadow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.2, 1.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_507cd"]
_data = {
"Pressed": SubResource("Animation_mfg5a"),
"RESET": SubResource("Animation_682hs")
}

[sub_resource type="LabelSettings" id="LabelSettings_ppg3d"]
font = ExtResource("2_x6lv5")
font_size = 40
font_color = Color(0.0196078, 0.0196078, 0.0196078, 1)

[sub_resource type="LabelSettings" id="LabelSettings_onmfu"]
font = ExtResource("3_v0y25")
font_size = 20
font_color = Color(0.219608, 0.219608, 0.219608, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -731.0
offset_bottom = -293.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Visit website" type="TextureButton" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -103.5
offset_top = -81.0
offset_right = 588.5
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("1_i31eh")
script = ExtResource("2_pxjhi")

[node name="Shadow" type="TextureButton" parent="Visit website"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -386.0
offset_top = -79.0
offset_right = 386.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(386, 79)
mouse_filter = 2
texture_normal = ExtResource("3_pdotm")

[node name="Button" type="TextureButton" parent="Visit website/Shadow"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -346.0
offset_top = -39.0
offset_right = 346.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(346, 39)
mouse_filter = 2
texture_normal = ExtResource("1_i31eh")

[node name="Hover" type="AnimationPlayer" parent="Visit website"]
libraries = {
"": SubResource("AnimationLibrary_8f6va")
}

[node name="Pressed" type="AnimationPlayer" parent="Visit website"]
libraries = {
"": SubResource("AnimationLibrary_507cd")
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -138.5
offset_right = 225.0
offset_bottom = 96.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.889, 0.889)
theme_override_constants/separation = 15

[node name="Icon" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 125)
layout_mode = 2
texture_normal = ExtResource("1_p074x")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Icon"]
layout_mode = 0
offset_left = 152.0
offset_top = 12.0
offset_right = 253.0
offset_bottom = 114.0
texture = ExtResource("1_xumjx")
expand_mode = 1
stretch_mode = 5

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Simple WBFS identifier"
label_settings = SubResource("LabelSettings_ppg3d")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Made by wiiugamerj - 1.0.0
This app uses GameTDB's Wii database"
label_settings = SubResource("LabelSettings_onmfu")
horizontal_alignment = 1

[connection signal="button_down" from="Visit website" to="Visit website" method="_on_button_down"]
[connection signal="button_up" from="Visit website" to="Visit website" method="_on_button_up"]
[connection signal="mouse_entered" from="Visit website" to="Visit website" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Visit website" to="Visit website" method="_on_mouse_exited"]
[connection signal="pressed" from="Visit website" to="Visit website" method="_on_pressed"]
